@@ -4,4 +4,4 @@ BUNDLE_EXTENSION=.sysbarentry
 
 $(BUNDLE_NAME)_STANDARD_INSTALL=no
 
-ADDITIONAL_OBJCFLAGS += -Wno-unused
+ADDITIONAL_OBJCFLAGS += -W -Wall -Wno-unused
