@@ -1,6 +1,6 @@
 {\rtf1\ansi\ansicpg10000\cocoartf102{\fonttbl\f0\fswiss Helvetica;}
 {\colortbl;\red255\green255\blue255;\red204\green204\blue204;}
-\cf1\pard\tx0\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\qc\f0\fs72 \uc0 Project Lead\par
+\paperw7620\paperh9600\hyphauto1\hyphfactor0\cf1\pard\tx0\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\qc\f0\fs72 \uc0 Project Lead\par
 \fs32 \uc0 \par
 \fs48 \uc0 Quentin Mathe\par
 Nicolas Roard\par
